--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,6 +61,10 @@ spring:
           destination: moviereviews
           contentType: application/json
 
+api:
+  url:
+    payment: http://movie:8080
+
 server:
   port: 8082
 ---
